change cloud services

--- a/saudi-arabia-linux-cloud.html
+++ b/saudi-arabia-linux-cloud.html
@@ -162,10 +162,11 @@
             </div>
             <div class="pt-body">
               <ul class="list-type-01 theme">
-                <li><i class="fas fa-check"></i> 1 Website</li>
+            
                 <li><i class="fas fa-check"></i> RAM 1 GB</li>
                 <li><i class="fas fa-check"></i> Processor 1 CPU</li>
                 <li><i class="fas fa-check"></i> Storage 20GB SSD</li>
+                <li><i class="fas fa-check"></i> 1000GB Monthly Traffic</li>
                 <li><i class="fas fa-check"></i> FREE cPanel/WHM</li>
                 <li><i class="fas fa-check"></i> FREE SSL</li>
                 <li><i class="fas fa-check"></i> FREE LiteSpeed</li>
@@ -187,10 +188,11 @@
             </div>
             <div class="pt-body">
               <ul class="list-type-01 theme">
-                <li><i class="fas fa-check"></i> 7 Websites</li>
+                
                 <li><i class="fas fa-check"></i> RAM 2 GB</li>
                 <li><i class="fas fa-check"></i> Processor 2 CPU</li>
                 <li><i class="fas fa-check"></i> Storage 40GB SSD</li>
+                <li><i class="fas fa-check"></i> 1000GB Monthly Traffic</li>
                 <li><i class="fas fa-check"></i> FREE cPanel/WHM</li>
                 <li><i class="fas fa-check"></i> FREE SSL</li>
                 <li><i class="fas fa-check"></i> FREE LiteSpeed</li>
@@ -211,11 +213,11 @@
               </div>
             </div>
             <div class="pt-body">
-              <ul class="list-type-01 theme">
-                <li><i class="fas fa-check"></i> Unlimited Websites</li>
+              <ul class="list-type-01 theme"> 
                 <li><i class="fas fa-check"></i> RAM 3 GB</li>
                 <li><i class="fas fa-check"></i> Processor 4 CPU</li>
                 <li><i class="fas fa-check"></i> Storage 80GB SSD</li>
+                <li><i class="fas fa-check"></i> 1000GB Monthly Traffic</li>
                 <li><i class="fas fa-check"></i> FREE cPanel/WHM</li>
                 <li><i class="fas fa-check"></i> FREE SSL</li>
                 <li><i class="fas fa-check"></i> FREE LiteSpeed</li>
