--- a/ssl.html
+++ b/ssl.html
@@ -107,7 +107,7 @@
       <div class="row md-m-25px-b justify-content-center text-center">
         <div class="col-lg-8">
           <h6 class="white-color m-15px-b theme2nd-bg p-15px-lr p-5px-tb d-inline-block border-radius-15 font-small">Plans</h6>
-          <h3 class="display-4 m-25px-b font-alt">Featured VPS Servers</h3>
+          <h3 class="display-4 m-25px-b font-alt">Featured Cloud  Servers</h3>
         </div>
       </div>
       <div class="row align-items-center">
@@ -124,10 +124,10 @@
             </div>
             <div class="pt-body">
               <ul class="list-type-01 theme">
-                <li><i class="fas fa-check"></i> 1 Website</li>
                 <li><i class="fas fa-check"></i> RAM 1 GB</li>
                 <li><i class="fas fa-check"></i> Processor 1 CPU</li>
                 <li><i class="fas fa-check"></i> Storage 20GB SSD</li>
+                <li><i class="fas fa-check"></i> 1000GB Monthly Traffic</li>
                 <li><i class="fas fa-check"></i> FREE cPanel/WHM</li>
                 <li><i class="fas fa-check"></i> FREE SSL</li>
                 <li><i class="fas fa-check"></i> FREE LiteSpeed</li>
@@ -149,10 +149,10 @@
             </div>
             <div class="pt-body">
               <ul class="list-type-01 theme">
-                <li><i class="fas fa-check"></i> 7 Websites</li>
                 <li><i class="fas fa-check"></i> RAM 2 GB</li>
                 <li><i class="fas fa-check"></i> Processor 2 CPU</li>
                 <li><i class="fas fa-check"></i> Storage 40GB SSD</li>
+                <li><i class="fas fa-check"></i> 1000GB Monthly Traffic</li>
                 <li><i class="fas fa-check"></i> FREE cPanel/WHM</li>
                 <li><i class="fas fa-check"></i> FREE SSL</li>
                 <li><i class="fas fa-check"></i> FREE LiteSpeed</li>
@@ -174,10 +174,10 @@
             </div>
             <div class="pt-body">
               <ul class="list-type-01 theme">
-                <li><i class="fas fa-check"></i> Unlimited Websites</li>
                 <li><i class="fas fa-check"></i> RAM 3 GB</li>
                 <li><i class="fas fa-check"></i> Processor 4 CPU</li>
                 <li><i class="fas fa-check"></i> Storage 80GB SSD</li>
+                <li><i class="fas fa-check"></i> 1000GB Monthly Traffic</li>
                 <li><i class="fas fa-check"></i> FREE cPanel/WHM</li>
                 <li><i class="fas fa-check"></i> FREE SSL</li>
                 <li><i class="fas fa-check"></i> FREE LiteSpeed</li>
