--- a/seo.html
+++ b/seo.html
@@ -159,7 +159,7 @@
     </div>
   </section>
   
-  <section class="section theme3rd-bg effect-section">
+  <section class="section dark-bg effect-section">
     <div class="container">
       <div class="row md-m-45px-b m-85px-b justify-content-center text-center">
         <div class="col-lg-12">
