add a new line in cloud services

--- a/saudi-arabia-linux-cloud.html
+++ b/saudi-arabia-linux-cloud.html
@@ -166,6 +166,7 @@
                 <li><i class="fas fa-check"></i> RAM 1 GB</li>
                 <li><i class="fas fa-check"></i> Processor 1 CPU</li>
                 <li><i class="fas fa-check"></i> Storage 20GB SSD</li>
+                <li><i class="fas fa-check"></i> 200 Mbps Connection</li>
                 <li><i class="fas fa-check"></i> 1000GB Monthly Traffic</li>
                 <li><i class="fas fa-check"></i> FREE cPanel/WHM</li>
                 <li><i class="fas fa-check"></i> FREE SSL</li>
@@ -192,6 +193,7 @@
                 <li><i class="fas fa-check"></i> RAM 2 GB</li>
                 <li><i class="fas fa-check"></i> Processor 2 CPU</li>
                 <li><i class="fas fa-check"></i> Storage 40GB SSD</li>
+                <li><i class="fas fa-check"></i> 200 Mbps Connection</li>
                 <li><i class="fas fa-check"></i> 1000GB Monthly Traffic</li>
                 <li><i class="fas fa-check"></i> FREE cPanel/WHM</li>
                 <li><i class="fas fa-check"></i> FREE SSL</li>
@@ -217,6 +219,7 @@
                 <li><i class="fas fa-check"></i> RAM 3 GB</li>
                 <li><i class="fas fa-check"></i> Processor 4 CPU</li>
                 <li><i class="fas fa-check"></i> Storage 80GB SSD</li>
+                <li><i class="fas fa-check"></i> 200 Mbps Connection</li>
                 <li><i class="fas fa-check"></i> 1000GB Monthly Traffic</li>
                 <li><i class="fas fa-check"></i> FREE cPanel/WHM</li>
                 <li><i class="fas fa-check"></i> FREE SSL</li>
